--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.2",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.26",
     "dotenv": "^16.3.1",
     "firebase": "^9.22.2",
     "react": "^18.2.0",
@@ -28,12 +33,15 @@
     "sass": "^1.62.1",
     "stripe": "^12.10.0",
     "styled-components": "^6.0.0-rc.3",
+    "typed-redux-saga": "^1.5.0",
+    "typescript": "^5.1.6",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.0",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
